# dinner-bash-dsa

./: CMakeLists.txt  Makefile  README.md
config/basic/: foods.txt  map.txt  recipes.txt
scripts/: all.bat  build.bat  clean.bat  run.bat
src/: main.c
src/adt/: map.c  map.h  matrix.c  matrix.h  prio_queue.c  prio_queue.h  stack.c  stack.h  static_list.c  static_list.h  tree.c  tree.h
src/app/: app.c  app.h  history.c  history.h  loader.c  loader.h  screen.c  screen.h  strconst.c  strconst.h
src/base/: food.c  food.h  point.c  point.h  simulator.c  simulator.h  time.c  time.h
src/core/: action.c  action.h  boolean.h  delivery.c  delivery.h  food.c  food.h  inventory.c  inventory.h  log.c  log.h  point.h  simulator.c  simulator.h  time.c  time.h
src/info/: food.c  food.h  point.c  time.h
